# flood-tide-gen

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: test.yml
docs/: review.1.md  review.2.md  review.3.md
fixtures/cmd-txt-in/aki-cmd/: aki-mcolor-cmd.txt  aki-mcycle-cmd.txt  aki-stats-cmd.txt  aki-unbody-cmd.txt  aki-xcat-cmd.txt
fixtures/cmd-txt-in/ds-cmd/: rust-bi5-tools-cat-cmd.txt  rust-bi5-tools-conv-cmd.txt  rust-bi5-tools-list-cmd.txt  rust-get-tick-dukascopy-cmd.txt  rust-iptables-sum-cmd.txt  rust-pdumpfs-cmd.txt  rust-postfix-log-mail-auth-cmd.txt  rust-postfix-log-mail-compleat-cmd.txt
fixtures/cmd-txt-in/dummy-cmd/: dummy-cmd-input.txt  dummy-cmd-output.txt
fixtures/cmd-txt-in/gp-cmd-devel/: gen-qqcmacro-cmd.txt  rust-execsize-cmd.txt  (+4 more)
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: gen_src_help.rs  gen_src_match.rs  lib.rs
tests/: basic.rs  dummy_cmd.rs  test_helper.rs  z-gen.rs
tests/aki_cmd/: aki_gsub.rs  aki_mcolor.rs  aki_mcycle.rs  aki_mline.rs  aki_resort.rs  aki_stats.rs  aki_unbody.rs  aki_xcat.rs  aki_xtee.rs  mod.rs
tests/ds_cmd/: mod.rs  rust_bi5_tools.rs  rust_get_tick_dukascopy.rs  rust_iptables_sum.rs  rust_pdumpfs.rs  rust_postfix_log_mail_auth.rs  rust_postfix_log_mail_compleat.rs
tests/gp_cmd/: linux_getopt.rs  memboost.rs  mod.rs  ps_mem.rs  rust_lookup_in_files.rs
tests/gp_cmd_devel/: gen_qqcmacro.rs  mod.rs  rust_execsize.rs  rust_viewexec.rs  rust_viewexec_info.rs  rust_viewexec_size.rs  rust_viewexec_string.rs  rust_viewexec_symbol.rs
(+63 files in other folders)
