[package]
name = "flood-tide-gen"
version = "0.1.18"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "command line flag and option parse utilities"
keywords = ["parse", "option", "command", "flag", "argument"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/aki-akaguma/flood-tide-gen"

[dependencies]
anyhow = "1.0"
case = "1.0"
regex = "1.7"
